--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title>Hello React!</title>
     </head>
     <body>
-        <div id="example" />
+        <div id="example" ></div>
 
-        <script src="./node_modules/react/umd/react.development.js"/>
-        <script src="./node_modules/react-dom/umd/react-dom.development.js" />
+        <script src="./node_modules/react/umd/react.development.js"></script>
+        <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
 
-        <script src="./dist/bundle.js" />
+        <script src="./dist/bundle.js"></script>
     </body>
 </html>
